# S32EFV

./: CHANGELOG.md  Dockerfile  README.md  S32EFV.cabal  docker-compose.yml  schema.sql
configs/grafana/: expenses-dashboard.json  expenses-dashboard.yml  postgres-datasource.yml
lib/: S32EFV.hs
lib/S32EFV/: Config.hs  Types.hs
lib/S32EFV/Parse/: BancoBolivariano.hs  BancoGuayaquil.hs  Handle.hs
lib/S32EFV/Storage/: Handle.hs  Postgres.hs
src/: Main.hs  Options.hs
test/: Spec.hs
