cabal-version:   3.0
name:            S32EFV
version:         0.1.0.0

-- synopsis:           
-- description:
license:         MIT
license-file:    LICENSE
author:          Alexander Goussas
maintainer:      goussasalexander@gmail.com

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    S32EFV
  build-depends:
    , base  ^>=4.17.2.1
    , text

  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

executable S32EFV
  import:             warnings
  main-is:            Main.hs
  build-depends:
    , base    ^>=4.17.2.1
    , S32EFV
    , scotty
    , text

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

test-suite S32EFV-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base    ^>=4.17.2.1
    , hspec
    , text
    , S32EFV
  default-extensions: OverloadedStrings
