cabal-version:   3.0
name:            S32EFV
version:         0.1.0.0

-- synopsis:           
-- description:
license:         MIT
license-file:    LICENSE
author:          Alexander Goussas
maintainer:      goussasalexander@gmail.com

-- copyright:
category:        Text
build-type:      Simple
-- extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    S32EFV
  build-depends:
    , aeson
    , base   ^>=4.17.2.1
    , text

  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    OverloadedStrings
    TypeApplications

executable S32EFV
  import:             warnings
  main-is:            Main.hs
  build-depends:
    , aeson                 >=2.2.3     && <2.3
    , base                  ^>=4.17.2.1
    , bytestring            >=0.11.5    && <0.12
    , http-types            >=0.12.4    && <0.13
    , optparse-applicative  >=0.18.1    && <0.19
    , postgresql-simple     >=0.6.5     && <0.7
    , S32EFV
    , scotty                >=0.22      && <0.23
    , text                  >=2.0.2     && <2.1
    , wai                   >=3.2.4     && <3.3
    , wai-extra             >=3.1.17    && <3.2

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

test-suite S32EFV-test
  import:             warnings
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base    ^>=4.17.2.1
    , hspec
    , S32EFV
    , text

  default-extensions: OverloadedStrings
